--- a/src/app/components/card/card.component.html
+++ b/src/app/components/card/card.component.html
@@ -1,4 +1,4 @@
-<div class="card" [ngClass]="contentClass()">
-  <span class="content front">{{ emoji() }}</span>
+<div class="card" [ngClass]="contentClass">
+  <span class="content front">{{ emoji }}</span>
   <span class="content back"> X </span>
 </div>
